# poly-bihc

./: LICENSE  README.md
compute/: compute.cpp  makefile  transfer.cpp
compute/include/: surface.hpp  types.hpp
gui/: CMakeLists.txt  main.cpp
gui/include/: coordinates.hpp  imgui_viewer.hpp  surface.hpp  types.hpp
gui/src/: imgui_viewer.cpp
symbolic/: main.cpp  makefile
symbolic/src/: numerical.cpp  phi_2d.hpp  phi_3d.hpp  poly.hpp  save.cpp  symbolic.hpp  terms.hpp  utils.hpp  vec_3d.hpp
